[BUG] Fix buttons in userpanel settings not visible on smaller windows

--- a/Client/Window/angular/projects/main/src/app/components/userpanel/userpanel-settings-normal/userpanel-settings-normal.component.scss
+++ b/Client/Window/angular/projects/main/src/app/components/userpanel/userpanel-settings-normal/userpanel-settings-normal.component.scss
@@ -18,6 +18,7 @@
         vertical-align: bottom;
         display: flex;
         flex-direction: row;
+        min-height: 18%;
 
         button {
             margin-top: 15px;
